@@ -53,8 +53,6 @@ extern int HX_ffs(unsigned long);
 extern void HX_hexdump(FILE *, const void *, unsigned int);
 extern long HX_time_compare(const struct stat *, const struct stat *, char);
 extern void HX_zvecfree(char **);
-extern int HX_fsystem(unsigned int, const char *, const char *, ...);
-extern int HX_vfsystem(unsigned int, const char *, const char *, va_list);
 
 /*
  *	RAND.C
