@@ -6,6 +6,9 @@ Fixes:
 - arbtree: correctly set errno (to ENOENT) in HXbtree_find and _get
 - string: document behavior details of HX_basename
 
+Changes:
+- removed old HX_vfsystem
+
 Features:
 - defs: add HXSIZEOF_Z*
 - defs: add HX_STRINGIFY
